welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:21: error: Unit does not take parameters
		setCouleurBrosse(T(k): Color);baisseBrosse();leveBrosse();avance()
                                  ^